infra/manifest/devops/overlays/dev/test-app-ingress-v1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress  
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "test-dev-api-frontend-config"
    kubernetes.io/ingress.global-static-ip-name: "test-dev-cluster-1-30-5-api-static-ip" 
    ingress.gcp.kubernetes.io/pre-shared-cert: "api-dev-gke-test-com"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  ingressClassName: "gce"
  rules:
    - host: "api-dev-gke.test.com"
      http:
        paths:
        - pathType: ImplementationSpecific
          path: "/*"
          backend:
            service:
              name: test-dev-api-service
              port:
                number: 80
